hyvinhän se skullaa

--- a/src/main.css
+++ b/src/main.css
@@ -3,6 +3,14 @@
     box-sizing: border-box;
 }
 
+a{
+    text-decoration: none;
+}
+
+a:visited{
+    text-decoration: none;
+}
+
 body{
     margin: 0;
     padding: 0;
