--- a/src/pages/shop/components/product-card/productCard.css
+++ b/src/pages/shop/components/product-card/productCard.css
@@ -9,10 +9,28 @@
 }
 
 .product-card--info{
-    
+
 }
 
 .product-card--image{
     border-radius: 5px;
     width: 100%
+}
+
+.add-to-cart-btn{
+    cursor: pointer;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.576);
+}
+
+.add-to-cart-btn:hover{
+    background-color: rgba(228, 228, 228, 0.873);
+}
+
+.add-to-cart-btn:active{
+    background-color: rgb(159, 183, 158);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0);
 }
